--- a/Pagination_Angular_noMaterial/src/app/app.component.html
+++ b/Pagination_Angular_noMaterial/src/app/app.component.html
@@ -21,16 +21,15 @@
                 </td>
 
             </tr>
-
-
             <tr *ngIf="slicedList.length < itemsPerPage">
             <tr *ngFor="let emptyRow of getEmptyRows(); let i = index">
                 <td colspan="6" class="py-3"><br></td>
             </tr>
         </tbody>
     </table>
-    <!-- end table -->
-    <div class="mt-4 mx-3 d-flex justify-content-end">
+    
+      <!--type 1-->
+      <div class="mt-4 mx-3 d-flex justify-content-end">
         <button class="btn btn-warning" (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1"> &lt;
         </button>
         <span class="mx-3 mt-2">Page {{ currentPage }} of {{ totalPages
@@ -38,6 +37,73 @@
         <button class="btn btn-warning" (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages">
             &gt;</button>
     </div>
+    <!--End of type 1  -->
+
+
+    <!--type 2-->
+    <div class="mt-5 ms-2  ">
+
+        <span class="d-flex justify-content-start " [ngStyle]="{'user-select': 'none'}">Showing
+            items
+            {{startItemIndex }} to
+            {{endtItemIndex}} of
+            {{allItemList.length}}</span>
+
+        <div class="d-flex justify-content-end mt-n4 me-2">
+            <button type="button" class="btn btn-sm mt-2 btn-icon" style="border: none;"
+                (click)="changePage(1)" title="START" [disabled]="currentPage <= 2"><i
+                    class="ri-skip-left-line fs-22"></i>
+            </button>
+            <button type="button" class="btn btn-sm mt-2 btn-icon" style="border: none;"
+                (click)="changePage(currentPage - 1)" title="PREVIOUS"
+                [disabled]="currentPage === 1"><i class="ri-arrow-left-s-line fs-22"></i>
+            </button>
+
+
+            <button type="button" *ngIf="(currentPage-3)>=1" class="btn btn-sm mt-1 fs-5">
+                ...
+            </button>
+            <button type="button" *ngIf="(currentPage-2)>=1" class="btn btn-sm mt-1 fs-5 "
+                (click)="changePage(currentPage -2)">
+                {{currentPage-2}}
+            </button>
+            <button type="button" *ngIf="(currentPage-1)>=1" class="btn btn-sm mt-1 fs-5"
+                (click)="changePage(currentPage -1)">
+                {{currentPage-1}}
+            </button>
+
+            <button type="button" class="btn btn-primary btn-sm fs-5 mt-1">
+                {{currentPage}} 
+            </button>
+
+            <button type="button" *ngIf="(currentPage+1)<= totalPages" class="btn btn-sm mt-1 fs-5"
+                (click)="changePage(currentPage + 1)">
+                {{currentPage+1}}
+            </button>
+            <button type="button" *ngIf="(currentPage+2)<= totalPages" class="btn btn-sm mt-1 fs-5"
+                (click)="changePage(currentPage +2)">
+                {{currentPage+2}}
+            </button>
+
+            <button type="button" *ngIf="(currentPage+3)<= totalPages" class="btn btn-sm mt-1 fs-5">
+                ...
+            </button>
+
+            <button class="btn btn-sm mt-2 btn-icon" style="border: none;"
+                (click)="changePage(currentPage + 1)" title="NEXT"
+                [disabled]="currentPage == totalPages"><i
+                    class="ri-arrow-right-s-line fs-22"></i></button>
+            <button class="btn btn-sm mt-2 btn-icon" style="border: none;"
+                (click)="changePage(totalPages)" title="LAST"
+                [disabled]=" currentPage >= totalPages-1"><i
+                    class="ri-skip-right-line fs-22"></i></button>
+        </div>
+    </div>
+    
+
+  
+
+    <!-- end table -->
 </div>
 <!-- end table responsive -->
 <ng-template #noData>
