--- a/Pagination_Angular_noMaterial/src/app/app.component.html
+++ b/Pagination_Angular_noMaterial/src/app/app.component.html
@@ -1,122 +1,153 @@
-<div class="table-responsive m-5" *ngIf="allItemList.length > 0; else noData">
-    <table class="table align-middle mb-0">
-        <thead class="table-light">
-            <tr>
+<div class="card-body">
 
-                <th scope="col">Item Code</th>
-                <th scope="col">Item Name</th>
-                <th scope="col">Description</th>
-                <th scope="col">Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let items of slicedList">
+    <div class="spinner-overlay-custom flex-column" *ngIf="isLoading">
+        <span class="loader-custom"></span>
+        <span class="fs-6 fw-semibold mt-5">Loading...</span>
+    </div>
 
-                <td>{{items.code }}</td>
-                <td>{{ items.shortdesc }}</td>
-                <td>{{ items.longdesc }}</td>
-                <td class="{{ items.isactive == 1 ? 'text-success' : 'text-danger' }}">
-                    <i class="ri-checkbox-circle-line fs-17 align-middle"></i>
-                    {{ items.isactive == 1 ? 'Active' : 'Inactive' }}
-                </td>
+    <div class="table-responsive m-5" *ngIf="allItemList.length > 0; else noData">
+        <table class="table align-middle mb-0" style="table-layout: fixed; width: 100%;">
+            <thead class="table-light">
+                <tr>
 
-            </tr>
-            <tr *ngIf="slicedList.length < itemsPerPage">
-            <tr *ngFor="let emptyRow of getEmptyRows(); let i = index">
+                    <th scope="col" [ngStyle]="{'width': '20%' }">Item Code</th>
+                    <th scope="col" [ngStyle]="{'width': '25%' }">Item Name</th>
+                    <th scope="col" [ngStyle]="{'width': '40%' }">Description</th>
+                    <th scope="col" [ngStyle]="{'width': '15%' }">Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let items of  paginatedData "> <!--slicedList  -->
+
+                    <td>{{items.code }}</td>
+                    <td>{{ items.shortdesc }}</td>
+                    <td>{{ items.longdesc }}</td>
+                    <td class="{{ items.isactive == 1 ? 'text-success' : 'text-danger' }}">
+                        <i class="ri-checkbox-circle-line fs-17 align-middle"></i>
+                        {{ items.isactive == 1 ? 'Active' : 'Inactive' }}
+                    </td>
+
+                </tr>
+
+                <!-- <tr *ngFor="let emptyRow of getEmptyRows(); let i = index">
                 <td colspan="6" class="py-3"><br></td>
-            </tr>
-        </tbody>
-    </table>
-    
-      <!--type 1-->
-      <div class="mt-4 mx-3 d-flex justify-content-end">
-        <button class="btn btn-warning" (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1"> &lt;
-        </button>
-        <span class="mx-3 mt-2">Page {{ currentPage }} of {{ totalPages
-            }}</span>
-        <button class="btn btn-warning" (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages">
-            &gt;</button>
-    </div>
-    <!--End of type 1  -->
+            </tr> -->
 
+                <!-- from imported component -->
+                <tr *ngFor="let emptyRow of getEmptyRowsImport(slicedListim.length); let i = index">
+                    <td colspan="12" class="py-3" style="border-bottom: none;"><br></td>
+                </tr>
+            </tbody>
+        </table>
 
-    <!--type 2-->
-    <div class="mt-5 ms-2  ">
+        Type: 1
 
-        <span class="d-flex justify-content-start " [ngStyle]="{'user-select': 'none'}">Showing
-            items
-            {{startItemIndex }} to
-            {{endtItemIndex}} of
-            {{allItemList.length}}</span>
-
-        <div class="d-flex justify-content-end mt-n4 me-2">
-            <button type="button" class="btn btn-sm mt-2 btn-icon" style="border: none;"
-                (click)="changePage(1)" title="START" [disabled]="currentPage <= 2"><i
-                    class="ri-skip-left-line fs-22"></i>
+        <!--type 1-->
+        <div class="mt-4 mx-3 d-flex justify-content-end">
+            <button class="btn btn-warning" (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1"> &lt;
             </button>
-            <button type="button" class="btn btn-sm mt-2 btn-icon" style="border: none;"
-                (click)="changePage(currentPage - 1)" title="PREVIOUS"
-                [disabled]="currentPage === 1"><i class="ri-arrow-left-s-line fs-22"></i>
-            </button>
-
-
-            <button type="button" *ngIf="(currentPage-3)>=1" class="btn btn-sm mt-1 fs-5">
-                ...
-            </button>
-            <button type="button" *ngIf="(currentPage-2)>=1" class="btn btn-sm mt-1 fs-5 "
-                (click)="changePage(currentPage -2)">
-                {{currentPage-2}}
-            </button>
-            <button type="button" *ngIf="(currentPage-1)>=1" class="btn btn-sm mt-1 fs-5"
-                (click)="changePage(currentPage -1)">
-                {{currentPage-1}}
-            </button>
-
-            <button type="button" class="btn btn-primary btn-sm fs-5 mt-1">
-                {{currentPage}} 
-            </button>
-
-            <button type="button" *ngIf="(currentPage+1)<= totalPages" class="btn btn-sm mt-1 fs-5"
-                (click)="changePage(currentPage + 1)">
-                {{currentPage+1}}
-            </button>
-            <button type="button" *ngIf="(currentPage+2)<= totalPages" class="btn btn-sm mt-1 fs-5"
-                (click)="changePage(currentPage +2)">
-                {{currentPage+2}}
-            </button>
-
-            <button type="button" *ngIf="(currentPage+3)<= totalPages" class="btn btn-sm mt-1 fs-5">
-                ...
-            </button>
-
-            <button class="btn btn-sm mt-2 btn-icon" style="border: none;"
-                (click)="changePage(currentPage + 1)" title="NEXT"
-                [disabled]="currentPage == totalPages"><i
-                    class="ri-arrow-right-s-line fs-22"></i></button>
-            <button class="btn btn-sm mt-2 btn-icon" style="border: none;"
-                (click)="changePage(totalPages)" title="LAST"
-                [disabled]=" currentPage >= totalPages-1"><i
-                    class="ri-skip-right-line fs-22"></i></button>
+            <span class="mx-3 mt-2">Page {{ currentPage }} of {{ totalPages
+                }}</span>
+            <button class="btn btn-warning" (click)="changePage(currentPage + 1)"
+                [disabled]="currentPage === totalPages">
+                &gt;</button>
         </div>
+        <!--End of type 1  -->
+
+            Type: 2
+        <!--type 2-->
+        <div class="mt-5 ms-2  ">
+
+            <span class="d-flex justify-content-start " [ngStyle]="{'user-select': 'none'}">Showing
+                items
+                {{startItemIndex }} to
+                {{endtItemIndex}} of
+                {{allItemList.length}}</span>
+
+            <div class="d-flex justify-content-end mt-n4 me-2">
+                <button type="button" class="btn btn-sm mt-2 btn-icon" style="border: none;" (click)="changePage(1)"
+                    title="START" [disabled]="currentPage <= 2"><i class="ri-skip-left-line fs-22"></i>
+                </button>
+                <button type="button" class="btn btn-sm mt-2 btn-icon" style="border: none;"
+                    (click)="changePage(currentPage - 1)" title="PREVIOUS" [disabled]="currentPage === 1"><i
+                        class="ri-arrow-left-s-line fs-22"></i>
+                </button>
+
+
+                <button type="button" *ngIf="(currentPage-3)>=1" class="btn btn-sm mt-1 fs-5">
+                    ...
+                </button>
+                <button type="button" *ngIf="(currentPage-2)>=1" class="btn btn-sm mt-1 fs-5 "
+                    (click)="changePage(currentPage -2)">
+                    {{currentPage-2}}
+                </button>
+                <button type="button" *ngIf="(currentPage-1)>=1" class="btn btn-sm mt-1 fs-5"
+                    (click)="changePage(currentPage -1)">
+                    {{currentPage-1}}
+                </button>
+
+                <button type="button" class="btn btn-primary btn-sm fs-5 mt-1">
+                    {{currentPage}}
+                </button>
+
+                <button type="button" *ngIf="(currentPage+1)<= totalPages" class="btn btn-sm mt-1 fs-5"
+                    (click)="changePage(currentPage + 1)">
+                    {{currentPage+1}}
+                </button>
+                <button type="button" *ngIf="(currentPage+2)<= totalPages" class="btn btn-sm mt-1 fs-5"
+                    (click)="changePage(currentPage +2)">
+                    {{currentPage+2}}
+                </button>
+
+                <button type="button" *ngIf="(currentPage+3)<= totalPages" class="btn btn-sm mt-1 fs-5">
+                    ...
+                </button>
+
+                <button class="btn btn-sm mt-2 btn-icon" style="border: none;" (click)="changePage(currentPage + 1)"
+                    title="NEXT" [disabled]="currentPage == totalPages"><i
+                        class="ri-arrow-right-s-line fs-22"></i></button>
+                <button class="btn btn-sm mt-2 btn-icon" style="border: none;" (click)="changePage(totalPages)"
+                    title="LAST" [disabled]=" currentPage >= totalPages-1"><i
+                        class="ri-skip-right-line fs-22"></i></button>
+            </div>
+        </div>
+        <!--End of type 2   -->
+
+
+
+
+        <div class="row">
+            Type: 3
+            <!--type 3-->
+
+            <!-- imported pagination -->
+
+            <app-pagination-import [totalItems]="allItemList.length " [currentPage]="currentPageim"
+                [startItemIndex]="startindex" [endItemIndex]="endindex" [totalPages]="totalpgs"
+                (pageChanged)="changePageImport($event)"></app-pagination-import>
+
+            <!--End of type 3   -->
+        </div>
+
+
+
+
+        <!-- end table -->
     </div>
-    
-
-  
-
-    <!-- end table -->
-</div>
-<!-- end table responsive -->
-<ng-template #noData>
-    <div class="py-4 text-center">
-        <div>
-            <!-- <lord-icon src="https://cdn.lordicon.com/msoeawqm.json"
+    <!-- end table responsive -->
+    <ng-template #noData>
+        <div class="py-4 text-center">
+            <div>
+                <!-- <lord-icon src="https://cdn.lordicon.com/msoeawqm.json"
               trigger="loop" colors="primary:#405189,secondary:#0ab39c"
               style="width:72px;height:72px">
           </lord-icon> -->
 
+            </div>
+            <div class="mt-4">
+                <h5>Sorry! No Result Found</h5>
+            </div>
         </div>
-        <div class="mt-4">
-            <h5>Sorry! No Result Found</h5>
-        </div>
-    </div>
-</ng-template>
+    </ng-template>
+
+</div>
